<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurahKahf">

    <ImageButton
        android:id="@+id/testPlayKahf"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/resetPlayKahf"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play_circle_outline"
        android:contentDescription="@string/play_surah_kahf" />

    <ImageButton
        android:id="@+id/resetPlayKahf"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_replay"
        android:contentDescription="@string/replay_surah_kahf_from_start" />

    <ImageButton
        android:id="@+id/backBtnKahf"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/back_to_surahs" />

    <ImageView
        android:id="@+id/imageViewKahf"
        android:layout_width="405dp"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:tag="Image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testPlayKahf"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_kahf_1"
        android:contentDescription="@string/surah_kahf" />

    <ImageButton
        android:id="@+id/forwardPageBtnKahf"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKahf"
        app:srcCompat="@drawable/ic_navigate_next"
        android:contentDescription="@string/next_page" />

    <TextView
        android:id="@+id/instructionKahf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_buttons_to_navigate_through_pages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forwardPageBtnKahf"
        app:layout_constraintStart_toEndOf="@+id/backPageBtnKahf"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKahf" />

    <ImageButton
        android:id="@+id/backPageBtnKahf"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKahf"
        app:srcCompat="@drawable/ic_arrow_back_ios"
        android:contentDescription="@string/previous_page" />


</androidx.constraintlayout.widget.ConstraintLayout>